All Major Features Enabled
Features complete:
- Weather
 - Level displays current conditions and temp

Features to be added:
- Config page
- Heart Rate or Weather on Level line
 - Level displays current heart rate

Stretch goal:
- Meters
 - Add battery, step, and sleep meter graphic bars like on the original Pip Boy 3000

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         ],
         "displayName": "Pip Boy 300",
         "enableMultiJS": true,
-        "messageKeys": [],
+        "messageKeys": [
+            "TEMPERATURE",
+            "CONDITIONS"
+        ],
         "projectType": "native",
         "resources": {
             "media": [
