--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "author": "north-40",
-    "dependencies": {},
+    "dependencies": {
+        "pebble-clay": "^1.0.4"
+    },
     "keywords": [],
     "name": "pip-boy-300",
     "pebble": {
@@ -13,11 +15,23 @@
         "enableMultiJS": true,
         "messageKeys": [
             "TEMPERATURE",
-            "CONDITIONS"
+            "CONDITIONS",
+            "MANUAL_STEPS",
+            "MANUAL_SLEEP",
+            "STEPS_TYPE",
+            "SLEEP_TYPE",
+            "CRIPPLED_STATUS",
+            "JS_CALL_TYPE"
         ],
         "projectType": "native",
         "resources": {
             "media": [
+                {
+                    "file": "images/bluetooth.png",
+                    "name": "BLUETOOTH_ICON",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
                 {
                     "file": "images/battery.png",
                     "name": "BATTERY",
